@@ -221,7 +221,7 @@ Questions can be asked on forum
 
 == License
 
-Copyright 2011, Google Inc. All Rights Reserved.
+Copyright 2011-2012, Google Inc. All Rights Reserved.
 
 Licensed under the Apache License, Version 2.0 (the "License"); you may not use
 this file except in compliance with the License.
